<resources>
    <string name="app_name">YoParker Ass</string>
    <string name="facebook_app_id">219882425522848</string>
    <string name="fb_login_protocol_scheme">fb219882425522848</string>
    <string name="google_client">938235121293-kbji1dprdofs32hd0boccuqfvh746l8q.apps.googleusercontent.com</string>
    <string name="splash_text">Reliable Parking and\nEasy to access</string>
    <string name="wel_come_text">Welcome to YoParker</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="some_other_location">Some Other Location</string>
    <string name="login_signup">LOGIN/SIGNUP</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_code">Please type the verification code sent\nto your number</string>
    <string name="cont">Continue</string>
    <string name="resend_code">Resend Code</string>
    <string name="success_icon">Success Icon</string>
    <string name="otp_confirmed">OTP Confirmed\nVERIFICATION SUCCESSFUL!</string>
    <string name="arrow_button">Arrow Button</string>
    <string name="ok">OK</string>
    <string name="my_booking">My Booking</string>
    <string name="find_my_vehicle">Find My Vehicle</string>
    <string name="rent_your_spot">Rent Your Spot</string>
    <string name="rent_parking">Rent Parking</string>
    <string name="hello">Hello!</string>
    <string name="post_your_space">Post your space</string>
    <string name="free">FREE</string>
    <string name="we_listen">We Listen</string>
    <string name="feedback">Feedback</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="parking">Parking</string>
    <string name="booking">Booking</string>
    <string name="wallets">Wallets</string>
    <string name="me">Me</string>

    <string name="API_KEY">AIzaSyBW390kba4E4wv0OwezO9Ep2-TP6nM4_I0</string>
    <string name="search">Search</string>
    <string name="metro_parking">Metro Parking</string>
    <string name="map">MAP</string>
    <string name="list">LIST</string>
    <string name="_500_rs"><![CDATA[<b><i>%1$s</i></b> RS]]></string>
    <string name="paid">PAID</string>

    <string name="imageview">ImageView</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="please_wait">Please wait…</string>
    <string name="enter_mobile">Please enter mobile number</string>
    <string name="enter_valid_number">Please enter valid mobile number</string>
    <string name="no_internet">No Internet connection</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="update_now">Update Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_firstname">Please enter FirstName</string>
    <string name="enter_lastname">Please enter LastName</string>
    <string name="enter_valid_email">Please enter valid Email Address</string>
    <string name="profle_string">Welcome, Neel"</string>
    <string name="verified_customer">Verified Customer</string>
    <string name="add_vehicles">Add Vehicles</string>
    <string name="my_wallet">My Wallet</string>
    <string name="notification">Notification</string>
    <string name="support">Support</string>
    <string name="my_profile">My Profile</string>
    <string name="select_your_vehicle">select your vehicle</string>
    <string name="vehicle_category">vehicle category</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_brand">Vehicle brand</string>
    <string name="vehicle_model">vehicle Model</string>
    <string name="vehicle_number">vehicle number</string>
    <string name="add_your_vehicle_photo_here">Add your vehicle photo here</string>
    <string name="add_now">ADD NOW</string>
    <string name="valid_number">Please enter valid vehicle number</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicle_colors">Vehicle Colors</string>
    <string name="other_color">Other Color</string>
    <string name="add_photo">Please Add vehicle photo</string>
    <string name="add_photo_4">Please Add minimum 4 vehicle photo</string>

    <string name="select_color">Please select vehicle color</string>
    <string name="select_category">Please select vehicle category</string>
    <string name="select_brand">Please select vehicle brand</string>
    <string name="select_model">Please select vehicle model</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Please enter valid password</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="commercial_parking_space">Commercial parking space</string>
    <string name="private_parking">Private parking</string>
    <string name="select_space_type">Select space type :</string>
    <string name="set_opening_time">Set Opening Time :</string>
    <string name="set_closing_time">Set Closing Time :</string>
    <string name="if_you_are">If you are :</string>
    <string name="next">Next</string>
    <string name="feature_about_your_parkinglot">Feature about your ParkingLot:</string>
    <string name="enter_the_features_of_your_space">Enter the features of your space</string>
    <string name="pricing_information">Pricing Information</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="price_per_hour">Price per Hour</string>
    <string name="price_per_day">Price per Day</string>
    <string name="price_per_month">Price per Month</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="zip_code">Zip Code</string>
    <string name="post_your_list">Post your list</string>
    <integer name="Response_Success">200</integer>

    <string name="rs_50">\u20B9 <b>%1$d</b> RS/h</string>
    <string name="rs_100">\u20B9 <b>%1$d</b> RS/D</string>
    <string name="rs_500">\u20B9 <b>%1$d</b> RS/W</string>
    <string name="rs_1500">\u20B9 <b>%1$d</b> RS/M</string>
    <string name="rs100">\u20B9 %1$d</string>
    <string name="select_d_t">Select Your Date &amp; Time</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your Email Address</string>
    <string name="enter_address">enter your full address</string>
    <string name="submit">Submit</string>
    <string name="commercialparking">Commercial Parking</string>
    <string name="enter_parking_name">Please enter parking name</string>
    <string name="enter_description">Please enter description</string>

    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="increase">Increase visibility to get more response by parking user </string>
    <string name="upgrade">Upgrade to user</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_valid_time">Please select valid time</string>
    <string name="enter_zip_code">Please enter zip code</string>
    <string name="directions">Directions</string>
    <string name="overview">Overview</string>
    <string name="rating_amp_reviews"><![CDATA[Rating & Reviews]]></string>
    <string name="write_a_review">Write A Review</string>
    <string name="add_parking_photo">Please add photo of the parking place</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="cancel">Cancel</string>
    <string name="price_per_week">Price per Week</string>
    <string name="select_parking_frequency">Please select parking frequency first</string>
    <string name="no_vehicle">No Vehicle</string>
    <string name="confirm">Confirm</string>
    <string name="your_space_is_reserved">Your Space is Reserved</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="wallets_balance">Wallets Balance</string>
    <string name="wallet_green"><![CDATA[Wallet<font color=#027802> (\u20B9 %1$d)</font>]]></string>
    <string name="wallet_red"><![CDATA[Wallet<font color=#FF0000> (\u20B9 %1$d)</font>]]></string>
    <string name="cod">Spot Pay</string>
    <string name="payment_options">Payment Options</string>
    <string name="select_payment_option">Please select Payment Option</string>
    <string name="enter_refer_code">Enter Refer Code</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="refer_text">Haven\'t tried YoParker Parking Booking yet? use my Referral Code <b>%1$s</b> and earn 21 rupees to book your next parking free !!! Download &amp; Install: https://play.google.com/store/apps/details?id=com.yoparking.admin.parkinghawker</string>
    <string name="add_aadhar_front">Please add Aadhar front photo</string>
    <string name="add_aadhar_back">Please add Aadhar back photo</string>
    <string name="add_parking_cer">Please add Parking certificate photo</string>
    <string name="booking_list">Booking List</string>
    <string name="phone"><![CDATA[<u>%1$s</u>]]></string>
    <string name="full_name">FullName</string>
    <string name="message">Message</string>
    <string name="enter_message">Please enter your message</string>
    <string name="verify_phone_number">Please verify mobile number</string>
    <string name="list_space">List New Space</string>
    <string name="manage_park">Manage Parkings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>