<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/helloTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/hello"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/postLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@color/red_dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/post_your_space"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_9ssp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/freelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/postLayout"
            android:layout_alignRight="@+id/postLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/yellow"
                android:padding="@dimen/_1sdp"
                android:text="@string/free"
                android:textSize="@dimen/_9ssp" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>