<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@android:color/white"></androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/AddBTN"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_vehicle"
                android:textAllCaps="true"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/CarLayout"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/circle_with_storke">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/car" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/BikeLayout"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/circle_withot_storke">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/bike" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/OtherLayout"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/circle_withot_storke">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="Others"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/vehicle_category"
                android:textAllCaps="true"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categoryGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"

                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/vehicle_colors"
                android:textAllCaps="true"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_14ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/color_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/vehicle_brand"
                android:textAllCaps="true"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/brandGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"

                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/vehicle_model"
                android:textAllCaps="true"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/modelGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"

                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/vehicle_number"
                android:textAllCaps="true"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/v_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/blue_color"
                android:singleLine="true"
                android:textColor="@color/blue_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/add_your_vehicle_photo_here"
                android:textAllCaps="true"
                android:textColor="@color/blue_color"
                android:textSize="@dimen/_14ssp" />
            <!-- <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:orientation="horizontal">
                 <RelativeLayout
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_100sdp"
                     android:background="@drawable/rounded_gray">
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
                         android:src="@drawable/ic_baseline_add_24"
                         android:padding="@dimen/_5sdp"
                         android:background="@drawable/gray_circle"/>
                 </RelativeLayout>
                 <RelativeLayout
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_100sdp"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:background="@drawable/rounded_gray">
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
                         android:src="@drawable/ic_baseline_add_24"
                         android:padding="@dimen/_5sdp"
                         android:background="@drawable/gray_circle"/>
                 </RelativeLayout>
             </LinearLayout>-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ImageRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/AddBTN"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/blue_color"
        android:gravity="center"
        android:text="@string/add_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>